Added About and Blog page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,6 +10,10 @@
 		<title>Astro</title>
 	</head>
 	<body>
+		<a href="/">Home</a>
+        <a href="/about/">About</a>
+		<a href="/blog/">Blog</a>
+
 		<h1>Astro</h1>
 		<h2>My Cool New Site</h2>
 	</body>
