--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,4 +1,6 @@
 ---
+import Header from '../components/Header.astro';
+import Footer from '../components/Footer.astro';
 import '../styles/global.css';
 
 const pageTitle = "About Me";
@@ -37,9 +39,7 @@ const textCase = "uppercase";
     </style>
 	</head>
     <body>
-        <a href="/">Home</a>
-        <a href="/about/">About</a>
-        <a href="/blog/">Blog</a>
+      <Header />
 
         <h1>{pageTitle}</h1>
         <h2>... and my new Astro site!</h2>
@@ -68,6 +68,7 @@ const textCase = "uppercase";
 {goal === 3 ? <p>My goal is to finish in 3 days.</p> : <p>My goal is not 3 days.</p>}
 
 
+<Footer />
       </body>
       
 </html>
