--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,6 @@
 ---
+import Header from '../components/Header.astro';
+import Footer from '../components/Footer.astro';
 import '../styles/global.css';
 const pageTitle = "Home";
 ---
@@ -12,11 +14,15 @@ const pageTitle = "Home";
 		<title>{pageTitle}</title>
 	</head>
 	<body>
-		<a href="/">Home</a>
-        <a href="/about/">About</a>
-		<a href="/blog/">Blog</a>
+<Header />
 
 		<h1>{pageTitle}</h1>
 		<h2>My Cool New Site</h2>
+
+
+
+		<Footer />		
 	</body>
+
+
 </html>
