--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -25,5 +25,6 @@ const pageTitle = "My Astro Learning Blog";
     </ul>
 
     <Footer />
+    <script>import "../scripts/menu.js";</script>
   </body>
   </html>
