--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -31,6 +31,19 @@ h1 {
   margin: 0;
 }
 
+.hamburger {
+  padding-right: 20px;
+  cursor: pointer;
+}
+
+.hamburger .line {
+  display: block;
+  width: 40px;
+  height: 5px;
+  margin-bottom: 10px;
+  background-color: #ff9776;
+}
+
 .nav-links a {
   display: block;
   text-align: center;
@@ -61,6 +74,10 @@ h1 {
   .nav-links a {
     display: inline-block;
     padding: 15px 20px;
+  }
+
+  .hamburger {
+    display: none;
   }
 
 }
