--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,7 +1,5 @@
 ---
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
-import '../styles/global.css';
+import BaseLayout from '../layouts/BaseLayout.astro';
 
 const pageTitle = "About Me";
 
@@ -23,13 +21,7 @@ const fontWeight = "bold";
 const textCase = "uppercase";
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{pageTitle}</title>
+<BaseLayout pageTitle={pageTitle}>
     <style define:vars={{skillColor, fontWeight, textCase}}>
       .skill{
         color: var(--skillColor);
@@ -37,11 +29,8 @@ const textCase = "uppercase";
         text-transform: var(--textCase);
       }
     </style>
-	</head>
-    <body>
-      <Header />
 
-        <h1>{pageTitle}</h1>
+
         <h2>... and my new Astro site!</h2>
       
         <p>I am working through Astro's introductory tutorial. This is the second page on my website, and it's the first one I built myself!</p>
@@ -67,9 +56,4 @@ const textCase = "uppercase";
 
 {goal === 3 ? <p>My goal is to finish in 3 days.</p> : <p>My goal is not 3 days.</p>}
 
-
-<Footer />
-<script>import "../scripts/menu.js";</script>
-      </body>
-      
-</html>
+</BaseLayout>
