--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,21 +1,9 @@
 ---
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
-import '../styles/global.css';
+import BaseLayout from '../layouts/BaseLayout.astro';
 const pageTitle = "My Astro Learning Blog";
 ---
 
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{pageTitle}</title>
-  </head>
-<body>
-  <Header />
-  
+<BaseLayout pageTitle={pageTitle}>
     <h1>{pageTitle}</h1>
     <p>This is where I will post about my journey learning Astro.</p>
     <ul>
@@ -24,7 +12,5 @@ const pageTitle = "My Astro Learning Blog";
       <li><a href="/posts/post-3/">Post 3</a></li>
     </ul>
 
-    <Footer />
-    <script>import "../scripts/menu.js";</script>
-  </body>
-  </html>
+  </BaseLayout>
+  
