--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,7 +1,7 @@
 ---
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
-import '../styles/global.css';
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
+import "../styles/global.css";
 const { pageTitle } = Astro.props;
 ---
 
@@ -14,13 +14,13 @@ const { pageTitle } = Astro.props;
 		<title>{pageTitle}</title>
 	</head>
 	<body>
-<Header />
+		<Header />
 
 		<h1>{pageTitle}</h1>
 		<slot />
-		<Footer />		
-		<script>import "../scripts/menu.js";</script>
+		<Footer />
+		<script>
+			import "../scripts/menu.js";
+		</script>
 	</body>
-
-
 </html>
